# iCMD

./: .gitignore  LICENSE  README.md  pyproject.toml
fine-tuning/: merge.py  pyproject.toml  train.py
icmd/: executor.py  llm.py  main.py  safety.py  utils.py
