[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "peft>=0.18.1",
    "python-dotenv>=1.2.2",
    "transformers>=5.3.0",
    "trl>=0.29.1",
]
